# lite-xl

./: .gitignore  meson.build
.github/: labeler.yml
.github/workflows/: auto_labeler_pr.yml  build.yml  release.yml
ci/: pyproject.toml
data/core/: command.lua  common.lua  init.lua  object.lua  scrollbar.lua  start.lua  statusview.lua  strict.lua  style.lua  view.lua
data/plugins/: demo.lua
docs/api/: globals.lua  renderer.lua  renwindow.lua
resources/windows/: lite-xl.exe.manifest.in
scripts/: build.sh  common.sh  package.sh
src/: bundle_open.m  main.c  meson.build  rencache.c  renderer.c  renderer.h  svg_hooks_nanosvg.c
src/api/: api.c  api.h  process.c  renderer.c  renderer_font.c  renderer_font_group.c  stream.c  stream.h  system.c
subprojects/: nanovg.wrap
